# python-testing

./: README.md  pyproject.toml
src/deepthought/: ponder.py
src/deepthought/services/: billing.py
tests/: test_01_assert.py  test_03_fixtures.py  test_04_external_apis.py  test_ponder.py
