[tool.poetry]
name = "deepthought"
version = "0.1.0"
description = "Real important super computer."
authors = ["Oscar Arbelaez <oscar@arbelaez.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.32"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.0"
pook = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
